--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
-Версия 1.6
-- Добавлен тир лист в DNA
-- Добавлена вкладка "О версии"
+<font color="#FF9800" size="4"><b>Версия 1.6:</b></font>
+
+• Добавлен тир лист в DNA
+• Добавлена вкладка "О версии"
+
+<font color="#FF9800" size="4"><b>Версия 1.5</b></font><br>
+• Релиз лаунчера
