--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
-<font color="#FF9800" size="4"><b>Версия 1.6:</b></font>
+<font color="#FF9800" size="4"><b>Версия 1.6:</b></font><br>
 <br>
-• Добавлен тир лист в DNA
-• Добавлена вкладка "О версии"
+• Добавлен тир лист в DNA<br>
+• Добавлена вкладка "О версии"<br>
 <br>
 <font color="#FF9800" size="4"><b>Версия 1.5</b></font><br>
 <br>
