--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 <font color="#FF9800" size="4"><b>Версия 1.7:</b></font><br>
 <br>
 • Изменён интерфейс лаунчера<br>
+• Сломалось автообновление. Версии выше необходимо скачать с GitHub<br>
 <br>
 <font color="#FF9800" size="4"><b>Версия 1.6:</b></font><br>
 <br>
