--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
 <font color="#FF9800" size="4"><b>Версия 1.8:</b></font><br>
 <br>
 • Добавлен трекер активностей в категорию DNA<br>
+• Случилась магия! Автообновление вернулось<br>
 <br>
 <font color="#FF9800" size="4"><b>Версия 1.7:</b></font><br>
 <br>
