--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,8 @@
 <font color="#FF9800" size="4"><b>Версия 1.7:</b></font><br>
 <br>
 • Изменён интерфейс лаунчера<br>
-• Сломалось автообновление. Версии выше необходимо скачать с GitHub<br>
+• Сломалось автообновление<br>
+<font color="red" size="4">Версии выше необходимо скачать с GitHub:</font><br>
 <br>
 <font color="#FF9800" size="4"><b>Версия 1.6:</b></font><br>
 <br>
