--- a/changelog.txt
+++ b/changelog.txt
@@ -12,7 +12,7 @@
 <font color="#FF9800" size="4"><b>Версия 1.6:</b></font><br>
 <br>
 • Добавлен тир лист в DNA<br>
-• Добавлена вкладка "О версии"<br>
+• Добавлена вкладка "версии"<br>
 <br>
 <font color="#FF9800" size="4"><b>Версия 1.5</b></font><br>
 <br>
