--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+<font color="#FF9800" size="4"><b>Версия 1.9:</b></font><br>
+<br>
+• Добавлены промокоды<br>
+• Описание персонажей в тир листе<br>
+• Измененый иконки<br>
+<br>
 <font color="#FF9800" size="4"><b>Версия 1.8:</b></font><br>
 <br>
 • Добавлен трекер активностей в категорию DNA<br>
