--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 <br>
 • Добавлены промокоды<br>
 • Описание персонажей в тир листе<br>
-• Измененый иконки<br>
+• Изменены иконки<br>
 <br>
 <font color="#FF9800" size="4"><b>Версия 1.8:</b></font><br>
 <br>
